--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "token-checker-mini",
   "version": "1.0.0",
   "private": true,
-  "homepage": "https://phi30031997.github.io/token-checker-mini",
   "dependencies": {
     "axios": "^1.7.2",
     "react": "^18.2.0",
@@ -12,14 +11,15 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "CI=false react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "devDependencies": {
     "gh-pages": "^6.3.0"
+  },
+  "engines": {
+    "node": "18.x"
   },
   "browserslist": {
     "production": [
@@ -32,8 +32,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "engines": {
-    "node": "18.x"
   }
 }
