--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "clean": "rm -rf node_modules package-lock.json && npm install"
   },
   "dependencies": {
-    "axios": "^1.5.0",
+    "axios": "^1.12.2",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "react-scripts": "^5.0.1",
+    "react-syntax-highlighter": "^15.6.6",
+    "refractor": "^5.0.0",
     "web-vitals": "^3.1.1"
   },
-  "devDependencies": {},
   "browserslist": {
     "production": [
       ">0.2%",
