--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
-    "react": "^18.3.0",
-    "react-dom": "^18.3.0",
+    "ethers": "^6.15.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
     "react-syntax-highlighter": "^15.6.6",
     "refractor": "^5.0.0",
