--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "token-scam-checker-mini",
   "version": "1.0.0",
   "private": true,
-  "description": "React app for token scam checking",
+  "description": "Token Scam Checker PRO ⚡ - Kiểm tra mã nguồn token phát hiện trap, blacklist, tax, mint, owner control, v.v.",
   "engines": {
     "node": "22.x"
   },
@@ -10,19 +10,25 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "clean": "rm -rf node_modules package-lock.json && npm install"
+    "eject": "react-scripts eject"
   },
   "dependencies": {
-    "axios": "^1.12.2",
-    "ethers": "^6.15.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1",
-    "react-syntax-highlighter": "^15.6.6",
-    "refractor": "^5.0.0",
-    "web-vitals": "^3.1.1"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-scripts": "5.0.1"
   },
+  "devDependencies": {},
+  "keywords": [
+    "token",
+    "scam",
+    "checker",
+    "etherscan",
+    "bscscan",
+    "crypto",
+    "react",
+    "vercel"
+  ],
+  "license": "MIT",
   "browserslist": {
     "production": [
       ">0.2%",
