--- a/vercel.json
+++ b/vercel.json
@@ -13,11 +13,11 @@
   "routes": [
     {
       "src": "^/api/(.*)$",
-      "dest": "/api/$1"
+      "dest": "/api/$1.js"
     },
     {
-      "src": "^(?!/api/).*",
-      "dest": "/"
+      "src": "/(.*)",
+      "dest": "/build/$1"
     }
   ]
 }
