fix vercel config and api placement

--- a/vercel.json
+++ b/vercel.json
@@ -13,11 +13,11 @@
   "routes": [
     {
       "src": "^/api/(.*)$",
-      "dest": "/api/$1.js"
+      "dest": "/api/$1"
     },
     {
-      "src": "/(.*)",
-      "dest": "/build/$1"
+      "src": "^(?!/api).*",
+      "dest": "/index.html"
     }
   ]
 }
